Added profile pictures upload functionality ( display picture not added )

--- a/BookFaceApp/Views/Profile/MyProfile.cshtml
+++ b/BookFaceApp/Views/Profile/MyProfile.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h2 class="text-center">@User.Identity?.Name</h2>
+@*<form asp-action="UploadProfilePicture" enctype="multipart/form-data" method="post" style="text-align: center;">
+	<input id="file-upload" name="file" type="file" />
+	<input type="submit" class="btn btn-primary" value="Upload" />
+</form>*@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
