Added working profile pictures functionality Bugs and fixes

--- a/BookFaceApp/Areas/Admin/Views/Role/Update.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/Role/Update.cshtml
@@ -6,7 +6,7 @@
 <h1 class="text-center">@ViewBag.Title</h1>
 <hr />
 
-<a asp-action="Roles" class="btn btn-primary">Back</a>
+<a asp-action="All" class="btn btn-primary">Back</a>
 
 <div asp-validation-summary="All" class="text-danger"></div>
 
