--- a/BookFaceApp/Areas/Admin/Views/Role/Add.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/Role/Add.cshtml
@@ -6,10 +6,10 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<a asp-action="Roles" class="btn btn-primary">Back</a>
+<a asp-action="All" class="btn btn-primary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
-<form asp-action="Create" method="post">
+<form asp-action="Add" method="post">
     <div class="form-group">
         <label for="name">Name:</label>
         <input name="name" class="form-control" />
