--- a/BookFaceApp/Areas/Admin/Views/Role/All.cshtml
+++ b/BookFaceApp/Areas/Admin/Views/Role/All.cshtml
@@ -6,7 +6,7 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<a asp-action="Create" class="btn btn-primary" style="margin-bottom: 10px;">Create a Role</a>
+<a asp-action="Add" class="btn btn-primary" style="margin-bottom: 10px;">Create a Role</a>
 
 <table class="table table-sm table-bordered table-bordered">
     <tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr>
