--- a/BookFaceApp/Views/Group/Details.cshtml
+++ b/BookFaceApp/Views/Group/Details.cshtml
@@ -15,10 +15,17 @@
     {
         @foreach (var publication in Model.Publications)
         {
-            <div class="card" style="width: 26rem; height: 32rem; margin: 5px;">
+            <div class="card" style="width: 420px; margin: 5px;">
                 @Html.HiddenFor(p => publication.Id)
                 <a asp-controller="Profile" asp-action="User" asp-route-id="@publication.User.UserName">
-                    <h5 class="card-title mt-1" style="padding: 5px;">@publication.User.FirstName @publication.User.LastName</h5>
+                    <div>
+                        <div style="float: left; margin-bottom: 10px; margin-right: 10px;">
+                            <img src="@publication.User.ProfilePicture!.ImageToString" style="height: 50px; width: 50px; border-radius: 50%; margin-top: 10px;" />
+                        </div>
+                        <div style="padding-top: 15px;">
+                            <h5 class="card-title mt-1" style="padding: 5px;">@publication.User.FirstName @publication.User.LastName</h5>
+                        </div>
+                    </div>
                 </a>
                 <img src="@publication.ImageUrl" class="card-img-top" alt="..." style="height: 240px; width: 390px;">
 
