--- a/BookFaceApp/Views/Home/Index.cshtml
+++ b/BookFaceApp/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PublicationViewModel>
 
 @{
-	ViewBag.Title = "Random Publications";
+    ViewBag.Title = "Random Publications";
 }
 
 
@@ -9,12 +9,19 @@
 <hr />
 
 <div id="main-card" class="text-center row main-card">
-	@foreach (var publication in Model)
-	{
-        <div class="card" style="width: 26rem; height: 32rem; margin: 5px;">
+    @foreach (var publication in Model)
+    {
+        <div class="card" style="width: 420px; margin: 5px;">
             @Html.HiddenFor(p => publication.Id)
             <a asp-controller="Profile" asp-action="User" asp-route-id="@publication.User.UserName">
-                <h5 class="card-title mt-1" style="padding: 5px;">@publication.User.FirstName @publication.User.LastName</h5>
+                <div>
+                    <div style="float: left; margin-bottom: 10px; margin-right: 10px;">
+                        <img src="@publication.User.ProfilePicture!.ImageToString" style="height: 50px; width: 50px; border-radius: 50%; margin-top: 10px;" />
+                    </div>
+                    <div style="padding-top: 15px;">
+                        <h5 class="card-title mt-1" style="padding: 5px;">@publication.User.FirstName @publication.User.LastName</h5>
+                    </div>
+                </div>
             </a>
             <img src="@publication.ImageUrl" class="card-img-top" alt="..." style="height: 240px; width: 390px;">
 
@@ -63,5 +70,5 @@
 
             </div>
         </div>
-	}
+    }
 </div>
