--- a/BookFaceApp/Views/Profile/User.cshtml
+++ b/BookFaceApp/Views/Profile/User.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<PublicationViewModel>
+@inject IProfileService profileService
 
 @{
     ViewBag.Title = "Selected User Publications";
@@ -6,8 +7,8 @@
 
 
 <h2 class="text-center">
-    <img src="@Model.First().User.ProfilePicture!.ImageToString" style="height: 50px; width: 50px; border-radius: 50%; margin-top: 10px;" />
-    @Model.Select(p => p.User.UserName).First().ToString()
+    <img src="@await profileService.GetProfilePictureAsync(User.Id())" style="height: 50px; width: 50px; border-radius: 50%; margin-top: 10px;" />
+    @User.Identity!.Name
 </h2>
 <h3 class="text-center">@ViewBag.Title</h3>
 <hr />
