--- a/BookFaceApp/Views/Error/InvalidPictureFormat.cshtml
+++ b/BookFaceApp/Views/Error/InvalidPictureFormat.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewBag.Title = "Picture format must be JPEG or PNG!";
+	ViewBag.Title = "Picture format must be PNG or JPEG!";
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
