Unimportant code changes

--- a/BookFaceApp/Views/Shared/_PublicationPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_PublicationPartial.cshtml
@@ -52,9 +52,9 @@
         </div>
 
         @*<div class="row">
-        @foreach (var comment in Model.PublicationsComments)
+        @foreach (var publicationComment in Model.PublicationsComments)
         {
-        <partial name="_CommentPartial" model="@comment.Comment" />
+        <partial name="_CommentPartial" model="@publicationComment" />
         }
         </div>*@
 
