--- a/BookFaceApp/Views/_ViewImports.cshtml
+++ b/BookFaceApp/Views/_ViewImports.cshtml
@@ -15,4 +15,5 @@
 @using BookFaceApp.Core.Models.Comment
 @using BookFaceApp.Core.Models.Publication
 @using BookFaceApp.Infrastructure.Data.Entities
+@using BookFaceApp.Infrastructure.Data.Entities.Relationships;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
