--- a/BookFaceApp/Views/Shared/_CommentPartial.cshtml
+++ b/BookFaceApp/Views/Shared/_CommentPartial.cshtml
@@ -1,14 +1,14 @@
-﻿@model Comment
+﻿@model PublicationComment
 
 <div class="card-body">
-	<h5 class="card-title mt-1">@Model.User.UserName</h5>
-	<h5 class="card-title mt-1">@Model.Text</h5>
-	@if (@Model.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
+	<h5 class="card-title mt-1">@Model.Comment.User.UserName</h5>
+	<h5 class="card-title mt-1">@Model.Comment.Text</h5>
+	@if (@Model.Comment.UserId == User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value)
 	{
-		<a class="btn btn-outline-info" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@Model.Id">
+		<a class="btn btn-outline-info" asp-area="" asp-controller="Comment" asp-action="Edit" asp-route-id="@Model.Comment.Id">
 			<img src="/lib/bootstrap-icons/pencil.svg" alt="Bootstrap" width="35" height="35">
 		</a>
-		<a class="btn btn-outline-danger" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@Model.Id" onclick="return confirm('Are you sure you want to delete this comment?')">
+		<a class="btn btn-outline-danger" asp-area="" asp-controller="Comment" asp-action="Delete" asp-route-id="@Model.Comment.Id" onclick="return confirm('Are you sure you want to delete this comment?')">
 			<img src="/lib/bootstrap-icons/x-square.svg" alt="Bootstrap" width="35" height="35">
 		</a>
 	}
